<resources>
    <string name="app_name">cursoavanzado</string>
    <string name="cargando">Cargando</string>
    <string name="Version">Version</string>
    <string name="descripciondecontenido">Imagen de la app curso avanzado</string>
    <string name="preparando">Preparando Aplicacion</string>
    <string name="espere">Espere un momento</string>
    <string name="accesar">accesar</string>
    <string name="clave">calve</string>
    <string name="logout">Logout</string>
    <string name="about">Acerca de</string>
    <string name="empresa">Soluciones Computacionales</string>
    <string name="autor">Carlos navarro</string>
    <string name="sigueme">sigueme en facebook:https://www.facebook.com/solcomputacionales/?ref=bookmarks</string>
    <string name="app">Reporteador</string>
    <string name="botonllmar">llamar</string>
    <string name="permisos">Conceder Permisos</string>
    <string name="alertaPermisos">Esta Aplicacion necesita ciertos permisos</string>
    <string name="leerQR">Leer Codigo</string>
    <string name="codigoEscaneado">codigo Escaneado:</string>
    <string name="nombre">Nombre</string>
    <string name="pass">password</string>
    <string name="agregarUsuario">agregarUsuarios</string>
    <string name="usuariosAPP">Usuarios de la App:</string>
    <string name="verusuarios">Ver Usuarios:</string>

</resources>